# Department

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  status.md
prj.analysis/: stack_analysis.ipynb
prj.analysis/jsonreader/: README.md
prj.app/: CMakeLists.txt  json_parser.cpp  stack_profiler.cpp
prj.app/hashspeed/: CMakeLists.txt  README.md  hashspeed.cpp  hashspeed1.csv  md_pdf.py  stats.ipynb
prj.app/jsonreader/: CMakeLists.txt  json_analysis.ipynb  jsonreader.cpp
prj.app/jsonreader/data/: file.json
prj.app/stack_profiler/: README.md  stack_analysis.ipynb  stack_profiler.cpp
prj.app/stack_profiler/data/: stack_arr_time.txt
prj.app/stackprofiler/: CMakeLists.txt  stack_profiler.cpp
prj.app/stackprofiler/data/: stack_lst_time.txt
prj.app/stringtester/: CMakeLists.txt  README.md  stringtester.cpp
prj.app/timertest/: CMakeLists.txt  README.md  log.csv  timertest.cpp
prj.cw/: CMakeLists.txt  README.md  experiment.ipynb
prj.cw/junctionpoints/: junction.cpp  junction.h
prj.data/: stack_arr_push.txt  stack_arr_time.txt  stack_lst_push.txt  stack_lst_time.txt
prj.data/json_parser/: file.json  my_parser.csv  my_parser_manipulate.csv  my_parser_vector.csv  my_parser_vector_manipulate.csv  nlochman.csv  nlochman_manipulate.csv
prj.data/stack/: stack_lst_time.txt
prj.lab/: CMakeLists.txt
prj.lab/CDualLinkedList/: CDualLinkedList.h  CMakeLists.txt  list.h
prj.lab/CSingleLinkedList/: CMakeLists.txt  CSingleLinkedList.h
prj.lab/Hashmap/: CMakeLists.txt  hash.h  hash_new.h
prj.lab/JsonParser/: CMakeLists.txt  json_parser.cpp  json_parser.h
prj.lab/avltree/: CMakeLists.txt  avltree.cpp  avltree.h
prj.lab/mm/: CMakeLists.txt  mm.cpp  mm.h
prj.lab/movetest/: CMakeLists.txt  movetest.h
prj.lab/sort/: CMakeLists.txt  sort.cpp  sort.h
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.cpp  stackarrt.h  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.h  stacklstt.hpp
prj.lab/timer/: CMakeLists.txt  timer.cpp  timer.h
prj.tst/: CDualLinkedList_doctest.cpp  CMakeLists.txt  CSingleLinkedList_doctest.cpp  hash_doctest.cpp  stackarr_doctest.cpp  stacklst_doctest.cpp
prj.tst/avltree/: CMakeLists.txt  avltree_doctest.cpp
prj.tst/hashmap/: CMakeLists.txt  hash_doctest.cpp
prj.tst/linkedlist/: CMakeLists.txt  CSingleLinkedList_doctest.cpp
prj.tst/mm/: CMakeLists.txt  mm_doctest.cpp
prj.tst/movetester/: CMakeLists.txt  movetest_doctest.cpp
prj.tst/sort/: CMakeLists.txt  sort_doctest.cpp
prj.tst/stack/: CMakeLists.txt  stackarr_doctest.cpp  stacklst_doctest.cpp
prj.tst/stackt/: CMakeLists.txt  stackarrt_doctest.cpp  stacklstt_doctest.cpp
