add_subdirectory(stackarr)
add_subdirectory(stackarrt)
add_subdirectory(stacklst)
add_subdirectory(stacklstt)
add_subdirectory(CSingleLinkedList)
add_subdirectory(CDualLinkedList)
add_subdirectory(Hashmap)
add_subdirectory(mm)
add_subdirectory(movetest)
add_subdirectory(sort)
add_subdirectory(timer)